Update: composer require

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
             "email": "domco123@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "php": ">=7.3"
+    },
     "autoload": {
         "psr-4": {
             "Ulib\\": "src"
