--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         }
     ],
     "require": {
-        "php": ">=7.3"
+        "php": ">=7.3",
+        "ext-dom": "*",
+        "ext-curl": "*",
+        "ext-libxml": "*"
     },
     "autoload": {
         "psr-4": {
